# vulkan-engine

./: Cargo.toml  test.wgsl
examples/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  triangle.rs
src/: batch.rs  freer.rs  inner_context.rs  lib.rs  main.rs  submission.rs  synchronization.rs
src/arena/: arena.rs  mod.rs  optional.rs  uint.rs
src/context/: device.rs  instance.rs
src/device/: batch.rs  debug.rs  inflight.rs  mod.rs  reflection.rs  ringbuffer_collection.rs  staging.rs  submission.rs
src/device/ring/: mod.rs  queue.rs  sparse.rs
src/graph/: allocator.rs  blackboard.rs  compile.rs  descriptors.rs  dot_writer.rs  execute.rs  lazy_sorted.rs  mod.rs  passes.rs  record.rs  resource_marker.rs  reverse_edges.rs  task.rs
src/instance/: mod.rs
src/object/: buffer.rs  compute_pipeline.rs  descriptor_set_layout.rs  framebuffer.rs  graphics_pipeline.rs  image.rs  mod.rs  pipeline_layout.rs  render_pass.rs  sampler.rs  shader_module.rs  storage.rs  surface.rs  swapchain.rs
src/passes/: mod.rs  passes.rs
src/storage/: interned.rs  mod.rs  nostore.rs
src/tracing/: mod.rs  shim_macros.rs  tracing_subscriber.rs
src/util/: debug_callback.rs  ffi_ptr.rs  format_utils.rs  format_writer.rs  macro_abuse.rs  mod.rs
test-bin/: main.rs  shader.frag  shader.vert  shader.vs
