[package]
name = "graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "./test-bin/main.rs"
name = "test-bin"

[dependencies]
pumice = {path = "../pumice", features = ["wrappers"]}
pumice-vma = {path = "../pumice-vma/pumice-vma"}

ahash = {version = "0.8.2", default-features = false, features = ["std"]}
smallvec = {version = "1.10.0", features = ["union", "const_generics"]}
parking_lot = {version = "0.12.1", features = ["send_guard"]}
rayon = "1.6.1"
slice-group-by = "0.3.0"
bumpalo = "3.12.0"

raw-window-handle = "0.5.0"
winit = {version = "0.27.4", default-features = false, features = ["wayland", "x11"]}

tracing = {version = "0.1", optional = true}
tracing-subscriber = {version = "0.3.15", default-features = false, features = ["fmt", "ansi", "env-filter"], optional = true}
termsize = {version = "0.1.6"}
nu-ansi-term = "0.46.0"

[features]
default = []
build-tracing = ["tracing", "tracing-subscriber"]
