[package]
name = "graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
path = "./examples/triangle.rs"
name = "triangle"

[dependencies]
pumice = {git = "https://github.com/mihavlic/vulkan-bindings.git", features = ["wrappers"]}
pumice-vma = {git = "https://github.com/mihavlic/pumice-vma.git"}
spirq = "0.6"

ahash = {version = "0.8", default-features = false, features = ["std"]}
smallvec = {version = "1.10", features = ["union", "const_generics", "write"]}
parking_lot = {version = "0.12", features = ["send_guard"]}
rayon = "1.6"
slice-group-by = "0.3"
bumpalo = "3.12"
fixedbitset = {version = "0.4", default-features = false}

raw-window-handle = "0.5"
winit = {version = "0.28", default-features = false}

tracing = {version = "0", optional = true}
tracing-subscriber = {version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter"], optional = true}
termsize = {version = "0.1"}
nu-ansi-term = "0.46"

[features]
default = []
build-tracing = ["tracing", "tracing-subscriber"]

[profile.dev.package.pumice]
opt-level = 1
debug = 1

[profile.dev.package.pumice-vma]
opt-level = 1
debug = 1

[profile.dev.package.winit]
opt-level = 1
debug = true
